snowflake, riak, zookeeper fixed

--- a/cookbooks/megam_snowflake/templates/default/production.scala.erb
+++ b/cookbooks/megam_snowflake/templates/default/production.scala.erb
@@ -15,7 +15,7 @@ new SnowflakeConfig {
   thriftServerThreads = 2
 
   zookeeperClientConfig = new ZookeeperClientConfig {
-    hostList = "localhost"
+    hostList = "<%= node['snowflake']['zookeeper'] %>"
   }
 
   reporterConfig = new ReporterConfig {
