--- a/cookbooks/megam_ciakka/templates/default/ec2_gulp.rb.erb
+++ b/cookbooks/megam_ciakka/templates/default/ec2_gulp.rb.erb
@@ -2,8 +2,8 @@ require 'json'
 require 'aws-sdk'
 
 AWS.config(
-  :access_key_id => 'AKIAJHENLMZT7TBPVMZQ',
-  :secret_access_key => '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'
+  :access_key_id => 'access_key',
+  :secret_access_key => 'secret_key'
 )
 
 # Create the basic S3 object
