--- a/cookbooks/megam_rails_application/templates/default/load_balancer.conf.erb
+++ b/cookbooks/megam_rails_application/templates/default/load_balancer.conf.erb
@@ -29,10 +29,10 @@ server {
 	<% end -%>
 
 	# serve static content directly
-	location ~* \.(ico|jpg|gif|png|css|js|swf)$ {
-		try_files $uri =404;
-		expires max;
-	}
+	#location ~* \.(ico|jpg|gif|png|css|js|swf)$ {
+	#	try_files $uri =404;
+	#	expires max;
+	#}
 
 	location / {
 		proxy_pass http://<%= @resource.application.name %>;
