Success: one good run for rails aryabhata

--- a/cookbooks/megam_ciakka/templates/default/ec2_gulp.rb.erb
+++ b/cookbooks/megam_ciakka/templates/default/ec2_gulp.rb.erb
@@ -34,7 +34,7 @@ File.open("/home/ubuntu/ec2_gulp.json","w") do |f|
 end
 
 
-bucket_name = 'megam'
+bucket_name = 'deps'
 source_filename = '/home/ubuntu/ec2_gulp.json'
 
 # Load up the 'bucket' we want to store things in
