--- a/cookbooks/logstash/templates/default/logstash_agent.conf.erb
+++ b/cookbooks/logstash/templates/default/logstash_agent.conf.erb
@@ -5,10 +5,13 @@ start on (filesystem and net-device-up)
 stop on runlevel [!2345]
 
 respawn
-respawn limit 5 30
+respawn limit <%=node['logstash']['agent']['upstart_respawn_count']%> <%=node['logstash']['agent']['upstart_respawn_timeout']%>
+
 
 chdir <%= node['logstash']['basedir'] %>/agent
+<% if node['logstash']['agent']['upstart_with_sudo'] == false -%>
 setuid <%= node['logstash']['user'] %>
+<% end -%>
 
 script
   export LOGSTASH_HOME="<%= node['logstash']['basedir'] %>/agent"
@@ -21,7 +24,11 @@ script
   <% end -%>
   export OPTS="$JAVA_OPTS $GC_OPTS -jar $LOGSTASH_HOME/lib/logstash.jar $LOGSTASH_OPTS"
 
+  <% if node['logstash']['agent']['upstart_with_sudo'] -%>
+  exec sudo -u <%= node['logstash']['user'] %> /usr/bin/java $OPTS
+  <% else -%>
   exec /usr/bin/java $OPTS
+  <% end -%>
 end script
 
 emits logstash-agent-running
