--- a/cookbooks/logstash/templates/default/logstash_server.conf.erb
+++ b/cookbooks/logstash/templates/default/logstash_server.conf.erb
@@ -6,6 +6,7 @@ stop on runlevel [!2345]
 
 respawn
 respawn limit 5 30
+limit nofile 65550 65550
 
 chdir <%= node['logstash']['basedir'] %>/server
 setuid <%= node['logstash']['user'] %>
@@ -16,6 +17,9 @@ script
   export GC_OPTS="<%= node['logstash']['server']['gc_opts'] %>"
   export JAVA_OPTS="-server -Xms<%= node['logstash']['server']['xms'] %> -Xmx<%= node['logstash']['server']['xmx'] %> -Djava.io.tmpdir=$LOGSTASH_HOME/tmp/ <%= node['logstash']['server']['java_opts'] %> <%= '-Djava.net.preferIPv4Stack=true' if node['logstash']['agent']['ipv4_only'] %>"
   export LOGSTASH_OPTS="agent -f $LOGSTASH_HOME/etc/logstash.conf -l <%= node['logstash']['log_dir'] %>/logstash.log"
+  <% if node['logstash']['server']['pluginpath'] -%>
+  export LOGSTASH_OPTS="$LOGSTASH_OPTS --pluginpath <%= node['logstash']['server']['pluginpath'] %>"
+  <% end -%>
   <% if node['logstash']['server']['debug'] -%>
   export LOGSTASH_OPTS="$LOGSTASH_OPTS -vv"
   <% end -%>
