--- a/cookbooks/megam_ganglia/templates/default/gmond_unicast.conf.erb
+++ b/cookbooks/megam_ganglia/templates/default/gmond_unicast.conf.erb
@@ -3,15 +3,19 @@ The values closely match ./gmond/metric.h definitions in 2.5.x */
 globals {
 daemonize = yes
 setuid = yes
-user = nobody
+user = ganglia
 debug_level = 0
 max_udp_msg_len = 1472
 mute = no
 deaf = no
-host_dmax = 0 /*secs */
+host_dmax = 86400 /*secs */
 cleanup_threshold = 300 /*secs */
 gexec = no
-send_metadata_interval = 0
+send_metadata_interval = 30
+
+  override_hostname = <%= node[:ganglia][:hostname] %>
+  override_ip = 127.0.0.1
+
 }
 
 /* If a cluster attribute is specified, then all gmond hosts are wrapped inside
@@ -38,16 +42,14 @@ send_metadata_interval = 0
 			/* Feel free to specify as many udp_send_channels as you like.  Gmond
 			used to only support having a single channel */
 			udp_send_channel {
-			mcast_join = 239.2.11.71
+			host = <%= @host %>
 			port = 8649
 			ttl = 1
 			}
 
 			/* You can specify as many udp_recv_channels as you like as well. */
 			udp_recv_channel {
-			mcast_join = 239.2.11.71
 			port = 8649
-			bind = 239.2.11.71
 			}
 
 			/* You can specify as many tcp_accept_channels as you like to share
@@ -55,14 +57,6 @@ send_metadata_interval = 0
 			tcp_accept_channel {
 			port = 8649
 			}
-
-			<% if node[:recipes].include? "ganglia::gmetad" && "ganglia::graphite" -%>
-			/* Additional receive channel for graphite integration */
-			udp_recv_channel {
-			bind = 127.0.0.1
-			port = 8649
-			}
-			<% end -%>
 
 			/* Each metrics module that is referenced by gmond must be specified and
 			loaded. If the module has been statically linked with gmond, it does not
