--- a/cookbooks/logstash/templates/default/agent.conf.erb
+++ b/cookbooks/logstash/templates/default/agent.conf.erb
@@ -19,6 +19,15 @@ filter {
 }
 <% end -%>
 
+filter {
+  grok {
+    type => "access-log"
+    match => [ "@source_path", "(//usr/local/share/megamakka/)(?<source_key>.+)(/*)" ]
+
+  }
+}
+
+
 output {
   <% if node['logstash']['agent']['debug'] -%>
   stdout { }
@@ -32,7 +41,7 @@ output {
     <% else -%>
   stdout { debug => true debug_format => "json"}
   redis {
-     key => "<%= node['logstash']['agent']['key'] %>"
+    key => '%{source_key}'
     type => "access-log"
      data_type => "channel"
      host => "<%= @logstash_server_ip %>"
