--- a/cookbooks/megam_route53/templates/default/route53_config.erb
+++ b/cookbooks/megam_route53/templates/default/route53_config.erb
@@ -1,6 +1,6 @@
 ---
-access_key: <%= node["myroute53"]["aws_access_key_id"] %>
-secret_key: <%= node["myroute53"]["aws_secret_access_key"] %>
+access_key: <%= @access_key %>
+secret_key: <%= @secret_key %>
 api: '<%= node["myroute53"]["api"] %>'
 endpoint: https://route53.amazonaws.com/
 default_ttl: '<%= node["myroute53"]["ttl"] %>'
