--- a/cookbooks/megam_gulp/templates/default/gulpd_init.conf.erb
+++ b/cookbooks/megam_gulp/templates/default/gulpd_init.conf.erb
@@ -19,6 +19,6 @@ pre-start script
 end script
 
 pre-stop script
-    rm /var/run/akka.pid
+    rm /var/run/gulpd.pid
     echo "[`date -u +%Y-%m-%dT%T.%3NZ`] (sys) Stopping" >> /var/log/upstart/gulpd.log
 end script
