--- a/cookbooks/megam_nodejs/templates/default/nodejs.conf.erb
+++ b/cookbooks/megam_nodejs/templates/default/nodejs.conf.erb
@@ -8,7 +8,7 @@ stop on shutdown
 pre-start script
     # Date format same as (new Date()).toISOString() for consistency
     echo "[`date -u +%Y-%m-%dT%T.%3NZ`] (sys) Starting" >> /var/log/upstart/nodejs.log
-    cd <%= node['sandbox']['home'] %>
+    cd <%= node['sandbox']['conf'] %>
     ./env.sh
 end script
 
