--- a/cookbooks/megam_gulp/templates/default/gulpd.conf.erb
+++ b/cookbooks/megam_gulp/templates/default/gulpd.conf.erb
@@ -1,6 +1,7 @@
 use-tls: false
 tls-cert-file: /path/to/cert.pem
 tls-key-file: /path/to/key.pem
+name: <%= node.name %>
 riak:
   url: api.megam.co:8087
   bucket: appreqs
