--- a/cookbooks/megam_logstash/templates/default/beaver.conf.erb
+++ b/cookbooks/megam_logstash/templates/default/beaver.conf.erb
@@ -1,8 +1,9 @@
 [beaver]
 
-redis_url: <%= node['logstash']['beaver']['redis_url'] %>
-
-redis_namespace: <%= node['logstash']['key'] %>
+rabbitmq_host: <%= node['logstash']['output']['url'] %>
+rabbitmq_queue: <%= node['logstash']['key'] %>
+rabbitmq_exchange: <%= node['logstash']['key'] %>
+rabbitmq_exchange_type: fanout
 
 <% node['logstash']['beaver']['inputs'].each do |inp| %>
 [<%= inp %>]
