--- a/cookbooks/megam_start/templates/default/initd_script.erb
+++ b/cookbooks/megam_start/templates/default/initd_script.erb
@@ -10,7 +10,7 @@ do_start() {
     if [ ! -d "${DIRECTORY}" ]; then
       mkdir /var/log/megam
     fi
-    exec sudo /usr/local/bin/node "${JS_FILE}" >> /var/log/megam/<%= node['megam']['start']['name'] %>.log 2>&1 &
+    exec sudo <%= node['megam']['start']['cmd'] %> >> /var/log/megam/<%= node['megam']['start']['name'] %>.log 2>&1
     # Date format same as (new Date()).toISOString() for consistency
     echo "[`date -u +%Y-%m-%dT%T.%3NZ`] (sys) Starting" >> /var/log/megam/<%= node['megam']['start']['name'] %>.log
 }
