--- a/cookbooks/megam_riak/templates/default/riak2.conf.erb
+++ b/cookbooks/megam_riak/templates/default/riak2.conf.erb
@@ -103,7 +103,7 @@ log.crash.rotation.keep = 5
 ## 
 ## Acceptable values:
 ##   - text
-nodename = riak@127.0.0.1
+nodename = riak@<%= `curl icanhazip.com` %>
 
 ## Cookie for distributed node communication.  All nodes in the
 ## same cluster should use the same cookie or they will not be able to
