--- a/cookbooks/megam_gulp/templates/default/gulpd.conf.erb
+++ b/cookbooks/megam_gulp/templates/default/gulpd.conf.erb
@@ -2,7 +2,7 @@ use-tls: false
 tls-cert-file: /path/to/cert.pem
 tls-key-file: /path/to/key.pem
 MEGAM_HOME: /var/lib/megam/
-update_queue: <%= node.name.split(".").first %><
+update_queue: <%= node.name.split(".").first %>
 id: <%= node["gulp"]["asm_id"] %>
 name: <%= node.name %>
 
