--- a/cookbooks/megam_environment/templates/default/env.sh.erb
+++ b/cookbooks/megam_environment/templates/default/env.sh.erb
@@ -1,5 +1,5 @@
 #!/bin/bash
-<% case @platform_family 
+<% case @platf_family 
    when "ubuntu" %>
 initctl set-env MEGAM_APP_SERVICE_HOME=<%= node['megam']['env']['home'] %>
   <% else %>
