--- a/cookbooks/megam_logging/templates/default/rsyslog.conf.erb
+++ b/cookbooks/megam_logging/templates/default/rsyslog.conf.erb
@@ -86,5 +86,5 @@ $template customSchema,"{%timestamp:::date-rfc3339,jsonf:@timestamp%,%source:::j
 
 $template srchidx,"<%= node['rsyslog']['index'] %>"
 
-*.* action(type="omelasticsearch" template="customSchema" bulkmode="on" searchIndex="srchidx" dynSearchIndex="on" server="<%= node['rsyslog']['elastic_ip'] %>")
+*.* action(type="omelasticsearch" template="customSchema" bulkmode="on" searchIndex="srchidx" dynSearchIndex="on" server="<%= node['megam_kibana'] %>")
 
