new cookbooks added

--- a/cookbooks/megam_backup/templates/default/my_backup.rb.erb
+++ b/cookbooks/megam_backup/templates/default/my_backup.rb.erb
@@ -101,12 +101,12 @@ end
     mail.on_warning           = true
     mail.on_failure           = true
 
-    mail.from                 = "alrin@megam.co.in"
+    mail.from                 = "thomasalrin@megam.io"
     mail.to                   = "thomasalrin@gmail.com"
     mail.address              = "smtp.googlemail.com"
     mail.port                 = 587
     mail.domain               = "megam.co.in"
-    mail.user_name            = "alrin@megam.co.in"
+    mail.user_name            = "thomasalrin@megam.io"
     mail.password             = "team4megam"
     mail.authentication       = "plain"
     mail.encryption           = :starttls
