--- a/cookbooks/megam_logging/templates/default/hekad.toml.erb
+++ b/cookbooks/megam_logging/templates/default/hekad.toml.erb
@@ -5,7 +5,7 @@
 <% file = File.basename("#{logfile}") %>
 <% file_name = File.basename(file, '.*') %>
 
-[<%= queue %>_<%= file_name %>]
+[<%= queue.split('.').first %>_<%= file_name %>]
 type = "LogstreamerInput"
 log_directory = "<%= path %>"
 file_match = "<%= file %>"
