--- a/cookbooks/megam_start/templates/default/init_script.conf.erb
+++ b/cookbooks/megam_start/templates/default/init_script.conf.erb
@@ -8,7 +8,7 @@ stop on shutdown
 pre-start script
     # Date format same as (new Date()).toISOString() for consistency
     echo "[`date -u +%Y-%m-%dT%T.%3NZ`] (sys) Starting" >> /var/log/megam/<%= node['megam']['start']['name'] %>.log
-    <%= node['megam']['user']['conf'] %>/<%= node['megam']['start']['name'] %>.sh
+    /var/lib/megam/<%= node['megam']['start']['name'] %>/env.sh
 end script
 
 script
