--- a/cookbooks/megam_tomcat/templates/default/java.conf.erb
+++ b/cookbooks/megam_tomcat/templates/default/java.conf.erb
@@ -12,6 +12,11 @@ respawn limit 10 5
 #setuid <%= node['megam']['default']['user'] %>
 setgid root
 
+pre-start script
+    # Date format same as (new Date()).toISOString() for consistency
+    echo "[`date -u +%Y-%m-%dT%T.%3NZ`] (sys) Starting" >> /var/log/megam/<%= node['megam']['start']['name'] %>.log
+    /var/lib/megam/<%= node['megam']['deps']['component']['name'] %>/env.sh
+end script
 
 # adapt paths:
 env JAVA_HOME=/usr
