--- a/cookbooks/megam_start/templates/default/init_script.conf.erb
+++ b/cookbooks/megam_start/templates/default/init_script.conf.erb
@@ -8,13 +8,13 @@ stop on shutdown
 pre-start script
     # Date format same as (new Date()).toISOString() for consistency
     echo "[`date -u +%Y-%m-%dT%T.%3NZ`] (sys) Starting" >> /var/log/megam/<%= node['megam']['start']['name'] %>.log
-    /var/lib/megam/<%= node['megam']['start']['name'] %>/env.sh
+    <%= node['megam']['lib']['home'] %>/<%= node['megam']['component']['name'] %>/env.sh
 end script
 
 script
     export HOME="/root"
-
     echo $$ > /var/run/<%= node['megam']['start']['name'] %>.pid
+    cd <%= node['megam']['start']['pwd'] %>
     exec sudo <%= node['megam']['start']['cmd'] %> >> /var/log/megam/<%= node['megam']['start']['name'] %>.log 2>&1
 end script
 
