--- a/cookbooks/megam_spark/templates/default/hosts.erb
+++ b/cookbooks/megam_spark/templates/default/hosts.erb
@@ -1,2 +1,3 @@
- <%=node['ipaddress']%>    <%=node['hostname']%>    localhost
- 127.0.0.1     <%=node['hostname']%>    localhost  
+<%= node['ipaddress'] %>    spark
+ 127.0.0.1     <%= node['hostname'] %>    localhost  
+
