--- a/cookbooks/megam_spark_notebook/templates/default/hosts.erb
+++ b/cookbooks/megam_spark_notebook/templates/default/hosts.erb
@@ -1,2 +1,2 @@
- <%=node['ipaddress']%>    <%=node['hostname']%>    localhost
- 127.0.0.1     <%=node['hostname']%>    localhost  
+<%=node['ipaddress']%>    <%= `hostname` %>    localhost
+127.0.0.1     <%= `hostname` %>    localhost  
