--- a/cookbooks/wordpress/templates/default/wordpress.conf.erb
+++ b/cookbooks/wordpress/templates/default/wordpress.conf.erb
@@ -1,4 +1,4 @@
-<VirtualHost *:80>
+<VirtualHost *:<%= @params[:server_port] %>>
   ServerName <%= @params[:server_name] %>
   ServerAlias <% @params[:server_aliases].each do |a| %><%= a %> <% end %>
   DocumentRoot <%= @params[:docroot] %>
@@ -6,8 +6,12 @@
   <Directory <%= @params[:docroot] %>>
     Options FollowSymLinks
     AllowOverride FileInfo Options
+    <% if node['apache']['version'] == '2.4' %>
+    Require all granted
+    <% else %>
     Order allow,deny
     Allow from all
+    <% end %>
   </Directory>
 
   <Directory />
@@ -20,7 +24,8 @@
   CustomLog <%= node['apache']['log_dir'] %>/<%= @params[:name] %>-access.log combined
 
   RewriteEngine On
+<% unless node['apache']['version'] == '2.4' %>
   RewriteLog <%= node['apache']['log_dir'] %>/<%= @application_name %>-rewrite.log
   RewriteLogLevel 0
-
+<% end %>
 </VirtualHost>
