--- a/cookbooks/megam_mongodb/templates/default/mongod.conf.erb
+++ b/cookbooks/megam_mongodb/templates/default/mongod.conf.erb
@@ -15,7 +15,7 @@ logappend=true
 #port = 27017
 
 # Listen to local interface only. Comment out to listen on all interfaces. 
-#bind_ip = 102.0.0.1
+#bind_ip = 127.0.0.1
 
 # Disables write-ahead journaling
 # nojournal = true
@@ -49,7 +49,7 @@ logappend=true
 #nohints = true
 
 # Enable the HTTP interface (Defaults to port 28017).
-#httpinterface = true
+httpinterface = true
 
 # Turns off server-side scripting.  This will result in greatly limited
 # functionality
