--- a/cookbooks/megam_java/templates/default/build.erb
+++ b/cookbooks/megam_java/templates/default/build.erb
@@ -3,7 +3,7 @@
 
 #megam_java_builder/build tomcat project=orion local_repo=/home/megam/tomcat/webaps remote_repo=https://github.com/thomasalrin/orion.git
 
-megam_home="/var/lib/megam/gulp/meta"
+megam_home="/var/lib/megam/gulp"
 local_repo=<%= node[:build][:localrepo] %>
 remote_repo=<%=  node[:build][:remote] %>
 
@@ -22,6 +22,3 @@ filename="${filename%.*}"
       pkgname="${pkgname%.*}"
       cp ./target/*.war $local_repo
       chown -R megam:megam $local_repo/$pkgname.war
-
-stop java
-start java
