--- a/cookbooks/megam_environment/templates/default/env.sh.erb
+++ b/cookbooks/megam_environment/templates/default/env.sh.erb
@@ -1,7 +1,7 @@
 #!/bin/bash
-<% case @platf_family 
+<% case @platf_family
    when "ubuntu" %>
-initctl set-env MEGAM_APP_SERVICE_HOME=<%= node['megam']['env']['home'] %>
+initctl set-env MEGAM_HOME=<%= node['megam']['env']['home'] %>
   <% else %>
   	#ELSE PRINT <%= @platform_family %>
 <% end %>
