--- a/cookbooks/megam_nodejs/templates/default/build.erb
+++ b/cookbooks/megam_nodejs/templates/default/build.erb
@@ -3,7 +3,7 @@
 
 #megam_nodejs_builder/build nodejs project=ghost local_repo=/home/sandbox/ghost remote_repo=https://github.com/thomasalrin/ghost.git
 
-remote_repo=<%= {node['scm'] %>
+remote_repo=<%= node['scm'] %>
 megam_home=<%= node['megam']['lib']['home'] %>/gulp
 
 project=$(basename "$remote_repo")
