--- a/cookbooks/megam_couchdb/templates/default/default.ini.erb
+++ b/cookbooks/megam_couchdb/templates/default/default.ini.erb
@@ -2,18 +2,18 @@
 
 ; Upgrading CouchDB will overwrite this file.
 [vendor]
-name = The Apache Software Foundation
-version = 1.6.1
+name = Ubuntu
+version = 14.04
 
 [couchdb]
-database_dir = /usr/local/var/lib/couchdb
-view_index_dir = /usr/local/var/lib/couchdb
-util_driver_dir = /usr/local/lib/couchdb/erlang/lib/couch-1.6.1/priv/lib
+database_dir = /var/lib/couchdb
+view_index_dir = /var/lib/couchdb
+util_driver_dir = /usr/lib/couchdb/erlang/lib/couch-1.6.1/priv/lib
 max_document_size = 4294967296 ; 4 GB
 os_process_timeout = 5000 ; 5 seconds. for view and external servers.
 max_dbs_open = 100
 delayed_commits = true ; set this to false to ensure an fsync before 201 Created is returned
-uri_file = /usr/local/var/run/couchdb/couch.uri
+uri_file = /var/run/couchdb/couch.uri
 ; Method used to compress everything that is appended to database and view index files, except
 ; for attachments (see the attachments section). Available methods are:
 ;
@@ -27,7 +27,7 @@ file_compression = snappy
 ; time for writes when there are many attachment write requests in parallel.
 attachment_stream_buffer_size = 4096
 
-plugin_dir = /usr/local/lib/couchdb/plugins
+plugin_dir = /usr/lib/couchdb/plugins
 
 [database_compaction]
 ; larger buffer sizes can originate smaller files
@@ -40,7 +40,7 @@ keyvalue_buffer_size = 2097152 ; value in bytes
 
 [httpd]
 port = 5984
-bind_address = <%= node['ipaddress'] %> 
+bind_address = <%= node['ipaddress'] %>
 authentication_handlers = {couch_httpd_oauth, oauth_authentication_handler}, {couch_httpd_auth, cookie_authentication_handler}, {couch_httpd_auth, default_authentication_handler}
 default_handler = {couch_httpd_db, handle_request}
 secure_rewrites = true
@@ -60,7 +60,7 @@ enable_cors = false
 port = 6984
 
 [log]
-file = /usr/local/var/log/couchdb/couch.log
+file = /var/log/couchdb/couch.log
 level = info
 include_sasl = true
 
@@ -126,8 +126,8 @@ credentials = false
 use_users_db = false
 
 [query_servers]
-javascript = /usr/local/bin/couchjs /usr/local/share/couchdb/server/main.js
-coffeescript = /usr/local/bin/couchjs /usr/local/share/couchdb/server/main-coffee.js
+javascript = /usr/bin/couchjs /usr/share/couchdb/server/main.js
+coffeescript = /usr/bin/couchjs /usr/share/couchdb/server/main-coffee.js
 
 
 ; Changing reduce_limit to false will disable reduce_limit.
@@ -153,9 +153,9 @@ compaction_daemon={couch_compaction_daemon, start_link, []}
 
 [httpd_global_handlers]
 / = {couch_httpd_misc_handlers, handle_welcome_req, <<"Welcome">>}
-favicon.ico = {couch_httpd_misc_handlers, handle_favicon_req, "/usr/local/share/couchdb/www"}
+favicon.ico = {couch_httpd_misc_handlers, handle_favicon_req, "/usr/share/couchdb/www"}
 
-_utils = {couch_httpd_misc_handlers, handle_utils_dir_req, "/usr/local/share/couchdb/www"}
+_utils = {couch_httpd_misc_handlers, handle_utils_dir_req, "/usr/share/couchdb/www"}
 _all_dbs = {couch_httpd_misc_handlers, handle_all_dbs_req}
 _active_tasks = {couch_httpd_misc_handlers, handle_task_status_req}
 _config = {couch_httpd_misc_handlers, handle_config_req}
