--- a/cookbooks/megam_spark_notebook/templates/default/upstart.conf.erb
+++ b/cookbooks/megam_spark_notebook/templates/default/upstart.conf.erb
@@ -21,7 +21,7 @@ respawn
 respawn limit 0 60
 
 pre-start script
-	[ -d /var/run/spark-notebook ] || install -m 755 -o spark-notebook -g spark-notebook -d /var/run/spark-notebook
+      [ -d /var/run/spark-notebook ] || install -m 755 -o 127.0.0.1 -g 127.0.0.1 -d /var/run/spark-notebook
 end script
 
 # set the working directory of the job processes
@@ -35,6 +35,5 @@ end script
 
 post-stop script
     exec rm RUNNING_PID
-    echo "[`date -u +%Y-%m-%dT%T.%3NZ`] (sys) Stopping" 
+    echo "[`date -u +%Y-%m-%dT%T.%3NZ`] (sys) Stopping"
 end script
-
